src/test/deca/context/valid/Obj/select-methode-convfloat.deca
// Description:
//    Utilisation d'une méthode avec un int à la place d'un float
//
// Résultat:
//    Succès
//
class A {
    void methode(float x){}

}
{
    A a;
    int n = 5;
    a.methode(n);
}